--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 <h1>Build your idea</h1>
 
 <!-- jquery library -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!--<script src="js/jquery.min.js" type="text/javascript"></script>-->
+ <script src="jquery.min.js" type="text/javascript"></script>
 <!-- main js file -->
 <script src="js/main.js" type="text/javascript"></script>
 <noscript>
