--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <h1>Build your idea</h1>
 
 <!-- jquery library -->
- <script src="jquery.min.js" type="text/javascript"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- main js file -->
-<script src="js/main.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
 <noscript>
   <h4>Please enable javascript in your browser!</h4>
 </noscript>
